[package]
name = "cglsys"
version = "0.1.0"
authors = ["Thor Correia <thor.lucas@icloud.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/thorlucas/cglsys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17.0"
